# quant-platform-mvp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEMO.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start_api.py
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: auth_deps.py  main.py  resource_auth.py
apps/web/: index.html  serve.py
data/: demo_survey.csv
docs/: UAT_CHECKLIST.md
docs/00_product/: FRONTEND_SPEC.md  NON_GOALS.md  PRD.md  SCOPE_MVP.md  USER_STORIES.md
docs/02_analysis_specs/: TURF_ALGORITHM.md  rigor_checklist.md
docs/04_architecture/: system_design.md
docs/05_decisions/: ADR-001-assistant-context-contract.md  ADR-002-p07-descope-decisions.md  ADR-003-storage-architecture.md  ADR-004-analysis-runtime.md  ADR-005-auth-rbac.md  ADR-006-api-versioning.md  ADR-TEMPLATE.md  CONTRIBUTING.md
docs/06_operations/: DEPENDENCY_MANAGEMENT.md  ONBOARDING.md  OWNERSHIP.md  RELEASE_PROCESS.md  ROLLBACK_PROCEDURE.md  RUNBOOKS.md  SMOKE_TEST_REPORT.md  SPRINT_COMMANDS.md
fixtures/analysis/: drivers_output.json  kmeans_output.json  run_comparison.json
fixtures/briefs/: cpg_brand_health.md  incomplete_brief.md
fixtures/generation/: regenerate_one_section_context.json  segmentation_attitudes_context.json  segmentation_screener_context.json
fixtures/mapping/: ambiguous_columns.json  clean_data_profile.json
fixtures/qa/: low_base_finding.json
legacy_reference/: source_docs_index.md
mcp/backlog/: README.md  mvp_master_plan.json  sprint_01.json
mcp/coordinator/: README.md
mcp/review_templates/: blocker_findings.example.json  methodology_acceptance_template.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
ops/docker/: nginx.conf
scripts/: bootstrap.ps1  bootstrap.py  bootstrap.sh  check_adr.py  check_ci_gates.py  check_deps.py  check_release.py  claude_worker.py  mcp_client.py  review_manager.py  run_sprint_loop.bat  run_sprint_loop.ps1  run_sprint_loop.py  seed_users.py
tests/: conftest.py
tests/e2e/: test_full_journey.py
tests/integration/: test_tables_api.py
tests/unit/: test_adr.py  test_api_compat.py  test_api_skeleton.py  test_assistant_context.py  test_assistant_shell.py  test_auth.py  test_auth_login.py  test_brief_analyzer.py  test_brief_parser.py  test_ci_gates.py  test_data_profiler.py  test_database.py  test_decipher_export.py  test_dep_management.py  test_docker_packaging.py  test_docx_export.py  test_draft_config.py  test_drivers.py  test_eval_framework.py  test_event_log.py  test_fix_workflow.py  test_generation_engine.py  test_golden_datasets.py  test_idempotency.py  test_insight_copilot.py  test_interaction_patterns.py  test_job_queue.py  test_mapping_copilot.py  test_mapping_e2e_smoke.py  test_mapping_engine.py  test_maxdiff_turf.py  test_migrations_backup.py  test_observability.py  test_ops_dashboard.py  test_optimistic_lock.py  (+18 more)
(+75 files in other folders)
