[project]
name = "quant-platform-mvp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.10",
]

# Explicit package list — too many top-level dirs for setuptools auto-discovery.
# Only ship the runtime packages and the API entry point in the wheel.
[tool.setuptools]
packages = [
    "apps",
    "apps.api",
    "apps.api.routes",
    "packages",
    "packages.shared",
    "packages.shared.db",
    "packages.survey_analysis",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
]
ignore = [
    "S101",   # assert used (fine in tests)
    "S608",   # SQL injection (we use parameterized queries)
    "S311",   # random (we use it for test data, not crypto)
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends pattern)
    "UP007",  # Optional[X] vs X | None (both fine)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S105"]  # asserts and hardcoded passwords ok in tests
"data/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
